Prevent jump in content between loading states

--- a/packages/component-library/draft/Kaizen/ZenNavigationBar/NavigationBar.module.scss
+++ b/packages/component-library/draft/Kaizen/ZenNavigationBar/NavigationBar.module.scss
@@ -82,6 +82,7 @@
   @include ca-margin($start: $ca-grid);
 
   height: 100%;
+  width: 197px;
   display: flex;
   align-items: center;
 }
